[package]
name = "pjsekai-soundgen-wasm"
version = "0.1.0"
authors = ["GitHub <noreply@github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = "1.0.24"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_closure = "0.3.2" 
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"
once_cell = "1.13.0"
web-sys = { version = "0.3.59", features = ["console"] }
reqwest = { version = "0.11", features = ["json"] }
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }
console_log = { version = "0.2", features = ["color"] }
crossbeam-channel = "0.5.6"   
futures = "0.3.24"  
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true }
try-catch = "0.2.2"    

[features]
parallel = ["rayon", "wasm-bindgen-rayon"]